Details
-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.5.0 FF
-
None
-
7acfa00132 (qt/qtinterfaceframework/dev)
Description
/Users/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifsimulationglobalobject.cpp agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/qt/qtinterfaceframework/src/interfaceframework/qifsimulationglobalobject.cpp:296:21: error: no matching function for call to 'invokeMethod' agent:2022/09/02 01:50:11 build.go:394: QMetaObject::invokeMethod(model, "insert", Q_ARG(int, 0), createArgument(*i)); agent:2022/09/02 01:50:11 build.go:394: ^~~~~~~~~~~~~~~~~~~~~~~~~ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:393:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(typename QtPrivate::FunctionPointer<Func>::Object *object, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:296:24: note: candidate function not viable: no known conversion from 'QMetaMethodArgument' to 'QGenericReturnArgument' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: static inline bool invokeMethod(QObject *obj, const char *member, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:313:24: note: candidate function not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: static inline bool invokeMethod(QObject *obj, const char *member, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:330:24: note: candidate function not viable: no known conversion from 'QMetaMethodArgument' to 'QGenericArgument' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: static inline bool invokeMethod(QObject *obj, const char *member, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:359:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *obj, const char *member, Qt::ConnectionType c, Args &&... arguments) agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:367:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'QMetaMethodReturnArgument' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *obj, const char *member, QMetaMethodReturnArgument r, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:417:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *context, Func function, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:439:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *context, Func function, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:282:17: note: candidate function not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: static bool invokeMethod(QObject *obj, const char *member, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:349:5: note: candidate function template not viable: no known conversion from 'QMetaMethodArgument' to 'Qt::ConnectionType' for 3rd argument agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *obj, const char *member, Qt::ConnectionType c, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:375:5: note: candidate template ignored: requirement '!AreOldStyleArgs<QMetaMethodArgument, QGenericArgument>::value' was not satisfied [with Args = <QMetaMethodArgument, QGenericArgument>] agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *obj, const char *member, Args &&... arguments) agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:405:5: note: candidate function template not viable: requires 3 arguments, but 4 were provided agent:2022/09/02 01:50:11 build.go:394: invokeMethod(typename QtPrivate::FunctionPointer<Func>::Object *object, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:428:5: note: candidate function template not viable: requires 3 arguments, but 4 were provided agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *context, Func function, agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: /Users/qt/work/install/lib/QtCore.framework/Headers/qobjectdefs.h:452:5: note: candidate function template not viable: requires 3 arguments, but 4 were provided agent:2022/09/02 01:50:11 build.go:394: invokeMethod(QObject *context, Func function, decltype(function()) *ret) agent:2022/09/02 01:50:11 build.go:394: ^ agent:2022/09/02 01:50:11 build.go:394: 1 error generated.
Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1662084008
Tested changes (refs/builds/qtci/dev/1662083342):
https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/430230/2 Update dependencies on 'dev' in qt/qtinterfaceframework
Attachments
For Gerrit Dashboard: QTBUG-106193 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
430878,4 | Don't rely on the Q_ARG and Q_RETURN_ARG macros | dev | qt/qtinterfaceframework | Status: MERGED | +2 | 0 |