Don't rely on the Q_ARG and Q_RETURN_ARG macros

QMethaObject::invokeMethod and friends have new
variadic versions and the macros have been ported
to use the new version.

Directly use QReturnArgument and QArgument where
needed until the QIfSimulationProxy has been
ported as well.

Fixes: QTBUG-106193
Change-Id: I7074cd8de443fe2348b14e46c6275bbe4d74ddb4
Reviewed-by: Bernd Weimer <bernd.weimer@qt.io>